fix: Call to action container spacing

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -208,7 +208,7 @@ $quote-font-weight: 300;
     align-items: center;
     background-color: $button-background-color;
     border-radius: 0.5rem;
-    padding: 1rem 8rem;
+    padding: 3rem 6rem;
 
     > div {
       width: 100%;
@@ -229,7 +229,7 @@ $quote-font-weight: 300;
         border: white 2px solid;
         color: white;
         border-radius: 0.5rem;
-        padding: 0.25rem 1rem;
+        padding: 0.25rem 1.5rem;
       }
     }
   }
